<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dbsimple.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:id="@+id/sRoll"
        android:hint="@string/sRoll" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:layout_below="@+id/sRoll"
        android:layout_alignRight="@+id/sRoll"
        android:layout_alignEnd="@+id/sRoll"
        android:layout_marginTop="32dp"
        android:id="@+id/sName"
        android:hint="@string/sName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/sName"
        android:layout_alignRight="@+id/sName"
        android:layout_alignEnd="@+id/sName"
        android:layout_marginTop="38dp"
        android:id="@+id/sMarks"
        android:inputType="text"
        android:hint="@string/sMarks" />

    <Button
        android:text="@string/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sMarks"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="45dp"
        android:id="@+id/btnAdd"
        android:onClick="onAddBtnClick" />

    <Button
        android:text="@string/btnModify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnAdd"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="33dp"
        android:layout_marginEnd="33dp"
        android:id="@+id/btnModify"
        android:onClick="onBtnModifyClick" />

    <Button
        android:text="@string/btnDel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnAdd"
        android:layout_alignLeft="@+id/btnAdd"
        android:layout_alignStart="@+id/btnAdd"
        android:layout_marginTop="30dp"
        android:id="@+id/btnDel"
        android:onClick="onBtnDelClick" />

    <Button
        android:text="@string/btnView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnDel"
        android:layout_alignLeft="@+id/btnModify"
        android:layout_alignStart="@+id/btnModify"
        android:id="@+id/btnView" />

    <Button
        android:text="@string/btnViewAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnModify"
        android:layout_centerHorizontal="true"
        android:id="@+id/btnViewAll"
        android:onClick="onBtnViewAllClick" />
</RelativeLayout>
